fix-bug footer/ align recrut form

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ main #accueil {
     background-size: cover;
     background-position: center 35%;
     color: white;
-    padding: 50px 0 80px;
+    padding: 50px 0 50px;
 }
 main #accueil div {
     display: flex;
@@ -223,7 +223,7 @@ main #website {
             black 60%,
             rgba(0, 0, 0, 0.2) 40%
     ),
-    url("https://cdn.discordapp.com/attachments/853589280299679765/861197102935048192/Background11.png");
+    url("http://tyrolium.fr/Contenu/Image/Background11.png");
     background-size: cover;
     background-position: center 35%;
     color: white;
@@ -240,38 +240,33 @@ main #website article h2 {
     margin-left: -70px;
 }
 main #website article p {
-    margin-bottom: 40px;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 767px) {
     main #website {
         background-image: linear-gradient(
-                to right,
+                to left,
                 #282828 90%,
-                rgba(0, 0, 0, 0.2) 9%
+                rgba(0, 0, 0, 0.2) 10%
         ),
-        url("http://tyrolium.fr/Contenu/Image/Background4.png");
+        url("http://tyrolium.fr/Contenu/Image/Background11.png");
         color: white;
-        padding-top: 30px;
-        padding-bottom: 5px;
-        padding-left: 0px;
-        padding-right: 0px;
+        padding: 30px 0 30px;
     }
     main #website article {
         width: 100%;
+        margin-left: 10%;
     }
-    main #website article h2 {
-        margin-left: 0;
-    }
-    
-    main #website article p {
-        margin-right: 40px;
+    main #website article h2{
+        margin-left: 0px;
     }
 }
 
 @media (max-width: 500px) {
     main #website {
         background: #282828;
+        padding: 30px 0 30px;
     }
     main #website article p {
         margin-left: 20px;
@@ -332,6 +327,9 @@ main #recrut button p{
 @media (max-width: 1056px) {
 
     #recrut ul li {
+        width: 50%;
+    }
+    #recrut ul li:last-of-type {
         width: 100%;
     }
 
@@ -343,6 +341,12 @@ main #recrut button p{
         margin-top: 50px;
     }
         
+}
+
+@media (max-width: 594px) {
+    #recrut ul li {
+        width: 100%;
+    }
 }
 
 
@@ -372,7 +376,6 @@ main #recrut button p{
 #credit article h2 {
     margin-left: 160px;
     text-transform : uppercase;
-    text-decoration: underline;
 }
 #credit article h3 {
     margin-left: 80px;
@@ -515,6 +518,31 @@ footer ul li div p#mail {
 
     footer form {
         order: -1;
+    }
+    
+    footer ul {
+        text-align: center;
+    }
+    
+    footer ul li {
+        display: unset;
+        align-items: center;
+    }
+    footer ul li div p#mail {
+        max-width: unset;
+    }
+    footer ul li span {
+        margin-right: 0px;
+    }
+    
+    footer ul li p {
+        text-align: center;
+    }
+    
+    footer ul li h3 {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 13px;
     }
 }
 
